# airquamon

./: Cargo.toml  README.md
airquamon_domain/: Cargo.toml
airquamon_domain/src/: lib.rs
display_themes/: Cargo.toml  README.md
display_themes/examples/: simulate_theme.rs  simulate_theme_1.rs  simulate_theme_2.rs
display_themes/src/: lib.rs  theme_1.rs  theme_2.rs  theme_3.rs
epd_display/: Cargo.toml
epd_display/src/: lib.rs
esp32c3_nostd/: Cargo.toml
esp32c3_nostd/.cargo/: config.toml
esp32c3_nostd/examples/: epd.rs  epd_clear.rs  epd_simple.rs  led_matrix.rs
esp32c3_nostd/src/: main.rs
sensor/: Cargo.toml
sensor/src/: lib.rs  mock_sensor.rs  scd4x_sensor.rs
src/: main.rs
