[workspace]
members = [
    "airquamon_domain",
    "display_themes",
    "esp32c3_nostd",
    "epd_display",
    "sensor"
]

resolver = "2"

[workspace.dependencies]
defmt = "=0.3.5"
esp32c3-hal = "0.13.0"
critical-section = "1.1.1"
atomic-polyfill = "1.0.2"
log = "0.4.18"
env_logger = "0.10.0"
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
enumset = { version = "1", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["const_mut_refs"] }
embedded-io = "0.4.0"
fugit = "0.3.7"
heapless = { version = "0.7.16", default-features = false }
num-derive = { version = "0.3", features = ["full-syntax"] }
num-traits = { version = "0.2", default-features = false }
embassy-sync = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }
embassy-net-driver = { version = "0.1.0" }
toml-cfg = "0.1.3"
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "fbb8417fc450ec0701067b36629770c11338231c", default-features = false }

embassy-net = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.3.0", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.3", features = ["nightly"] }
futures-util = { version = "0.3.28", default-features = false }
esp-println = { version = "0.6.0" }
esp-backtrace = { version = "0.8.0", features = ["panic-handler", "exception-handler", "print-uart"] }
embedded-hal-async = { version = "1.0.0-rc.1" }

epd-waveshare = {  git = "https://github.com/BrendanBall/epd-waveshare.git", rev = "5da7c141a8e77a083f4ef759798cf43b2e90a271" }
