[package]
name = "display_themes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8"
heapless = "0.7.16"
airquamon_domain = { path = "../airquamon_domain" }
epd-waveshare = { path = "/home/brendan/dev/projects/epd-waveshare" }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
epd-waveshare = { path = "/home/brendan/dev/projects/epd-waveshare", features = ["graphics"] }
