[package]
name = "display_themes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8"
embedded-layout = "0.4.1"
heapless = "0.7.16"
airquamon_domain = { path = "../airquamon_domain" }
epd-waveshare = { path = "/home/brendan/dev/projects/epd-waveshare" }
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
epd-waveshare = { path = "/home/brendan/dev/projects/epd-waveshare", features = ["graphics"] }
clap = { version = "4.4.8", features = ["derive"] }

[features]
theme1 = []
theme2 = []
theme3 = []

[[example]]
name              = "simulate_theme"
