[package]
name = "epd_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airquamon_domain = { path = "../airquamon_domain" }
display_themes = { path = "../display_themes" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0-rc.1"
epd-waveshare = {  workspace = true }
log = { version = "0.4.18" }
