[package]
name = "esp32c3_nostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
scd4x = "0.2.1"
epd-waveshare = "0.5.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
max7219 = "0.4.0"
max7219-driver = "0.2.2"
heapless = "0.7.16"