[package]
name = "esp32c3_nostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airquamon_domain = { path = "../airquamon_domain" }
display_themes = { path = "../display_themes" }
epd_display = { path = "../epd_display" }
sensor = { path = "../sensor" }
esp32c3-hal = { version = "0.13.0", features = ["eh1"] }
esp-hal-common = { version = "0.13.1", features = ["esp32c3", "eh1"] }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3","log"] }
log = { version = "0.4.18" }
epd-waveshare = { path = "/home/brendan/dev/projects/epd-waveshare" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0-rc.1"
max7219 = "0.4.0"
max7219-driver = "0.2.2"
heapless = "0.7.16"