[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airquamon_domain = { path = "../airquamon_domain" }
embedded-hal = "1.0.0-rc.1"

[dependencies.scd4x]
version = "0.2.1" 
git = "https://github.com/BrendanBall/scd4x-rs.git"
rev = "1acda0deb3296138c12bcf2532d99299e0ad0ae0"
default-features = false